--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -3,6 +3,16 @@
 {% load crispy_forms_tags %}
 
 
+<style>
+    .content-section{
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+
+    }
+</style>
+
+
 
 <div class="content-section">
     <form method="POST">
