features product names

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -337,7 +337,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/1.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> Art </div>
                         </div>
                     </div>
                 </li>
@@ -345,7 +345,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> wall art </div>
                         </div>
                     </div>
                 </li>
@@ -353,7 +353,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> DINNERWARE </div>
                         </div>
                     </div>
                 </li>
@@ -361,7 +361,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/9.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
                         </div>
                     </div>
                 </li>
@@ -369,7 +369,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/10.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> DINNERWARE </div>
                         </div>
                     </div>
                 </li>
@@ -377,7 +377,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> WALL ART </div>
                         </div>
                     </div>
                 </li>
@@ -385,7 +385,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/1.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> chandelier </div>
                         </div>
                     </div>
                 </li>
@@ -393,7 +393,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> WAll ART </div>
                         </div>
                     </div>
                 </li>
@@ -402,7 +402,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> dinnerware </div>
                         </div>
                     </div>
                 </li>
@@ -410,7 +410,7 @@
                     <div class = "container" data-aos="fade-in">
                         <img src="{% static 'Raul/Images/3.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
-                            <div class = "textInfo"> Furniture </div>
+                            <div class = "textInfo"> yo </div>
                         </div>
                     </div>
                 </li>
