--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -2,15 +2,6 @@
 body{
 	font-family: 'Roboto',sans-serif;
 }
-.shopping-cart{
-	padding-bottom: 50px;
-}
-
-.container2{
-	max-width: 1140px;
-	padding:100px 50px 0px 50px;
-	margin:0px auto;
-}
 
 .shopping-cart.dark{
 	background-color: #333333;
@@ -18,10 +9,57 @@ body{
 	margin-right:auto;
 }
 
+.shopping-cart{
+	padding-bottom: 10px;
+}
+
+.container2{
+	max-width: 1280px;
+	padding:100px 50px 0px 50px;
+	margin:0px auto;
+}
+
+.shopping-cart .block-heading{
+    padding-top: 50px;
+    margin:100px auto 50px auto;
+    height: 300px;
+    width:100%;
+    text-align: center;
+    background: url('Images/shoppingCartBanner.jpg');
+    background-position: center left;
+}
+
+.shopping-cart .block-heading p{
+    text-align: center;
+    padding:32px 32px;
+    max-width: 800px;
+    max-height: 300px;
+    margin:20px auto;
+    font-size: 80px;
+    color:#cfbb63;
+    font-weight: normal;
+    font-family: 'Roboto',sans-serif;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.product{
+    margin-left:auto;
+    margin-right: auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .shopping-cart .content{
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-	background-color: white;
-	padding:50px;
+	background-color: rgba(0, 0, 0, 0.3);
+    padding:50px;
+    color:#cfbb63;
+}
+
+.product-name a{
+    color:#cfbb63;
+    letter-spacing: 2px;
 }
 
 .row{
@@ -30,8 +68,20 @@ body{
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top:30px;
+}
+
+.row2{
+	display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top:30px;
 }
 
 @media (min-width: 992px){
@@ -56,16 +106,30 @@ body{
     -webkit-box-flex: 0;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
-    max-width: 25%;
 }
 }
+
+@media (min-width: 768px){
+    .colmd3 {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 5%;
+        text-align: center;
+    }
+
+    }
 
 @media (min-width: 768px){
 .col-md-5 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 41.666667%;
-    flex: 0 0 41.666667%;
-    max-width: 41.666667%;
+    flex: 0 0 30%;
+    max-width: 30%;
+}
+
+.col-md-5 .product-info{
+    letter-spacing: 1px;
+    padding:5px 0px;
 }
 }
 
@@ -73,17 +137,11 @@ body{
 .col-md-4 {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
+    flex: 0 0 60%;
+    max-width: 60%;
 }
 }
 
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-}
-[type=reset], [type=submit], button, html [type=button] {
-    -webkit-appearance: button;
-}
 .btn-block {
     display: block;
     width: 100%;
@@ -115,7 +173,54 @@ body{
 	line-height: 1.5;
 	margin:30px 0px;
     border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+@media (min-width: 768px){
+.col-md-8 {
+    /* -webkit-box-flex: 0; */
+    -ms-flex-: 0 0 20%;
+    /* flex: 0 0 66.666667%; */
+    max-width: 70%;
+}
+}
+
+@media (min-width: 768px){
+        .column8 {
+            /* -webkit-box-flex: 0; */
+            -ms-flex-: 0 0 20%;
+            /* flex: 0 0 66.666667%; */
+            max-width: 60%;
+        }
+    }
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+.ml-auto, .mx-auto {
+    margin-left: auto!important;
+}
+.mr-auto, .mx-auto {
+    margin-right: auto!important;
+}
+.d-block {
+    display: block!important;
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+img {
+    vertical-align: middle;
+    border-style: none;
 }
 
 .menuBar{
@@ -130,7 +235,6 @@ figure{
 	margin:16px 0px;
 }
 a {
-    color: #007bff;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
@@ -148,7 +252,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: .5rem;
 }
 
-.col-md-3, .col-md-4, .col-md-5, .col-lg-4, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+.col-md-3,.colmd3, .col-md-4, .col-md-5, .col-lg-4, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
     position: relative;
     width: 100%;
     min-height: 1px;
@@ -162,8 +266,29 @@ button, input {
     overflow-y: visible;
 }
 
+.quantityPlace{
+    background-color: transparent;
+    border:none;
+    text-align: center;
+    outline: none;
+    border-bottom: 1px solid #cfbb63;
+    color:#cfbb63;
+    border-radius: 0px;
+    width:100px;
+    margin-bottom:15px;
+    
+}
+
 button, input, optgroup, select, textarea {
-    margin: 0;
+    margin: 5px;
+    background-color: #cfbb63;
+    outline: none;
+    border: 1px solid #cfbb63;
+    color:#333333;
+    font-weight: bold;
+    cursor: pointer;
+    padding:8px;
+
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
@@ -171,23 +296,6 @@ button, input, optgroup, select, textarea {
 
 [type=reset], [type=submit], button, html [type=button] {
     -webkit-appearance: button;
-}
-
-.shopping-cart .block-heading{
-    padding-top: 50px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.shopping-cart .block-heading p{
-	text-align: center;
-	max-width: 420px;
-	margin: auto;
-	opacity:0.7;
-}
-
-.shopping-cart .dark .block-heading p{
-	opacity:0.8;
 }
 
 .shopping-cart .block-heading h1,
@@ -199,12 +307,6 @@ button, input, optgroup, select, textarea {
 
 .shopping-cart .items{
 	margin: auto;
-}
-
-.shopping-cart .items .product{
-	margin-bottom: 20px;
-	padding-top: 20px;
-	padding-bottom: 20px;
 }
 
 .shopping-cart .items .product .info{
@@ -231,44 +333,46 @@ button, input, optgroup, select, textarea {
 }
 
 .shopping-cart .items .product .info .price{
-	margin-top: 15px;
+	margin: 15px 0px;
     font-weight: bold;
     font-size: 22px;
+    letter-spacing: 2px;
  }
 
-.shopping-cart .summary{
-	border-top: 2px solid darkgoldenrod;
-    background-color: #f7fbff;
-    height: 100%;
+.summary{
+    background-color: transparent;
+    max-width:1100px;
+    margin:10px auto;
     padding: 30px;
+    text-align: right;
+    color:#cfbb63;
 }
 
-.shopping-cart .summary h3{
-	text-align: center;
-	font-size: 1.3em;
-	font-weight: 600;
-	padding-top: 20px;
-	padding-bottom: 20px;
+.summary .text{
+	font-size: 20px;
+    font-weight: 600;
+    margin-left: 10px;
+    font-weight: normal;
 }
 
-.shopping-cart .summary .summary-item:not(:last-of-type){
-	padding-bottom: 10px;
-	padding-top: 10px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+.summary .price{
+    font-size: 20px;
+    padding:0 10px;
+    font-weight: bold;
 }
 
-.shopping-cart .summary .text{
-	font-size: 1em;
-	font-weight: 600;
+.summary .buttonCheckout{
+    margin-top: 20px;
+    padding:16px 32px;
+    color:#333333;
+    font-weight: bold;
+    background-color: #cfbb63;
+    outline: none;
 }
 
-.shopping-cart .summary .price{
-	font-size: 1em;
-	float: right;
-}
-
-.shopping-cart .summary button{
-	margin-top: 20px;
+.summary input{
+    outline: none;
+    border:none;
 }
 
 .headers figure{
@@ -288,7 +392,9 @@ button, input, optgroup, select, textarea {
 	}
 
 	.shopping-cart .items .product .info .quantity {
-		text-align: center; 
+        text-align: center; 
+        display: flex;
+        flex-wrap: nowrap;
 	}
 	.shopping-cart .items .product .info .quantity .quantity-input {
 		padding: 4px 10px;
