--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -7,7 +7,7 @@
     <title>Shopping Cart</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css""> -->
     <link rel="stylesheet" type="text/css" href="{% static 'Raul/shopping-cart.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
@@ -36,11 +36,11 @@
     <section class="shopping-cart dark">
         <div class="container2">
             <div class="block-heading">
-                <h2>Shopping Cart</h2>
+                <p>Shopping Cart</p>
             </div>
             <div class="content">
                 <div class="row">
-                    <div class="col-md-12 col-lg-8">
+                    <div class="column">
                         <div class="items">
                             {% for item in cart.cartitem_set.all %}
                             <div class="product">
@@ -48,19 +48,19 @@
                                     <div class="col-md-3">
                                         <a href="{% url 'Raul-single' item.product.slug %}" >
                                         <img class="img-fluid mx-auto d-block image" src="{{item.product.image.url}}">
-                                        <a href="{% url 'remove_from_cart' item.id %}">remove</a>
                                     </div>
                                     <div class="col-md-8">
                                         <div class="info">
-                                            <div class="row">
+                                            <div class="row2">
                                                 <div class="col-md-5 product-name">
                                                     <div class="product-name">
-
                                                         <a href="{% url 'Raul-single' item.product.slug %}">{{item.product}}</a>
                                                         <div class="product-info">
                                                             <div>Display: <span class="value">studded vase ${{item.product.price}}
-																	Metal Vase Bronze 5 H x 5 W</span></div>
+                                                                    Metal Vase Bronze 5 H x 5 W</span></div>
+                                                                    
                                                             {% for sub_item in item.variation.all%}
+    
                                                                 <div> <span class="value">{{sub_item.title}}</span></div>
                                                             {% endfor %}
                                                         </div>
@@ -69,7 +69,7 @@
                                                 <div class="col-md-4 quantity">
                                                     <form class= 'form pull-right' method='POST' action="{% url 'add_to_cart' item.product.slug %}">
                                                         {% csrf_token %}
-                                                        <input name='qty' type='number' placeholder={{item.quantity}} value='{{item.quantity}}' />
+                                                        <input name='qty' class= "quantityPlace" type='number' placeholder={{item.quantity}} value='{{item.quantity}}' />
                                                        {% if item.variation.colors %}
 
                                                         {% for sub_item in item.variation.colors%}
@@ -82,17 +82,17 @@
                                                            {% for sub_item in item.variation.sizes%}
                                                                <input name="size" type="hidden" value= '{{sub_item.title}}'/>
                                                            {% endfor %}
-
                                                         {% endif %}
 
 
                                                         <input type='submit' value='update cart' />
+                                                        <a href="{% url 'remove_from_cart' item.id %}"><button class ="removeButton">remove</button></a>
                                                     </form>
 
 
                                                 </div>
 
-                                                <div class="col-md-3 price">
+                                                <div class="colmd3 price">
                                                     <span>${{item.line_total}}</span>
                                                 </div>
                                             </div>
@@ -103,20 +103,24 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="col-md-12 col-lg-4">
+                    <!-- <div class="col-md-12 col-lg-4">
                         <div class="summary">
                             <h3>Summary</h3>
-                            <div class="summary-item"><span class="text">Subtotal</span><span class="price">${{ cart.total}}</span></div>
-                            <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
-                            <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
-                            <div class="summary-item"><span class="text">Total</span><span class="price">${{ cart.total  }}</span></div>
+                            <div class="summary-item"><span class="text">Subtotal</span><span class="price">${{ cart.total}}</span></div>                           
                             <a type="button" class="btn btn-primary btn-lg btn-block"  href="{% url 'checkout'  %}"> Checkout</a>
                         </div>
                     </div>
+                </div> -->
                 </div>
             </div>
         </div>
     </section>
+    <div class="summary">
+        <div class="summary-item"><span class="text">Subtotal:</span><span class="price">${{ cart.total}}</span></div>   
+                               
+        <a type="button" class="buttonCheckout"  href="{% url 'checkout'  %}">Checkout</a>
+        
+    </div>
 </main>
 <button onclick="topFunction()" id="scrollTop"> <img src="{% static 'Raul/Images/arrowDown.png' %}"> </button>
 </body>
