--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -2560,6 +2560,82 @@ nav ul li a:hover{
         animation: animatezoom 0.6s
       }
 
+    .popUpMessage{
+        display: block; 
+        position: fixed;
+        z-index: -1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.5);
+        padding-top: 20px;
+        overflow: hidden;
+        -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+        animation: 5s fadeout ;
+    }
+
+    .messageRegister{
+        background-color: #333333;
+        margin: 15% auto 15% auto; 
+        border: 1px solid rgba(0,0,0,0.5);
+        color:#cfbb63;
+        width: 400px;
+        height:200px; 
+        max-height:250px;
+        font-family: 'Roboto',sans-serif;
+        border-radius: 50px;
+        
+    }
+
+    .messageRegister div{
+        text-align: center;
+        width:200px;
+        margin: 0px auto;
+        padding:60px 0px;
+        font-size: 19px;
+        color:#cfbb63;
+    }
+
+    @-webkit-keyframes fadein {
+        from {bottom: 0; opacity: 0;} 
+        to {bottom: 30px; opacity: 1;}
+      }
+      
+      @keyframes fadein {
+        from {bottom: 0; opacity: 0;}
+        to {bottom: 30px; opacity: 1;}
+      }
+      
+      @-webkit-keyframes fadeout {
+        from {bottom: 30px; opacity: 1;} 
+        to {bottom: 0; opacity: 0;}
+      }
+      
+      @keyframes fadeout {
+        0%{
+            opacity:0.5;
+            z-index: 190;
+        }
+        25%{
+            opacity: 0.8;
+            z-index: 200;
+        }
+        50%{
+            opacity:1;
+            z-index: 200;
+        }
+        75%{
+            opacity: 0.5;
+            z-index: 200;
+        }
+        100%{
+            opacity: 0;
+            z-index: -1;
+        }
+      }
+
     footer{
         height: 200px;
         width:100%;
